[package]
name = "pinci"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7", features = ["device"] }
cortex-m-rtic = "1.1.3"
rtt-target = { version = "0.3", features = ["cortex-m"] }
fugit = "0.3"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "1fe47e8382e1240323593845f7d7ca552751657f" }
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
rp2040-hal = { version = "0.7.0", features = ["rt"] }
rp-pico = "0.6.0"

[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = false

